sample/asm/errors/empty_block_body.asm
.block: foo
.end

.function: main/1
    izero 0
    return
.end
